--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -21,7 +21,16 @@
                 {{ render(controller("PPHeaderBundle:Header:showHeader")) }}                    
             </div>
         </header>
-        
+
+        {# ALERT BANNER #}
+        <section id="alert-banner" class="alert-banner">
+        {# info success warning danger #}
+            <div class="content">
+                <strong id="alert-banner-strong">Well done!</strong> 
+                <span id="alert-banner-span">You successfully read this important alert message.</span>
+            </div>
+        </section>
+
         {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
         <section id="messageApp" style="display:none;" class="overlay-messages">
             {{ render(controller("PPMessageBundle:Message:initMessageBox"))}}
