--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -15,79 +15,81 @@
 </head>
 
 <body id="body">
-    <div class="container">
-        <header id="header" class="navbar">
-            <div class="content" ng-app="headerApp">
-                {{ render(controller("PPHeaderBundle:Header:showHeader")) }}                    
-            </div>
-        </header>
+  <div id="main">
+      <div class="container">
+          <header id="header" class="navbar">
+              <div class="content" ng-app="headerApp">
+                  {{ render(controller("PPHeaderBundle:Header:showHeader")) }}                    
+              </div>
+          </header>
 
-        {# ALERT BANNER #}
-        <section id="alert-banner" class="alert-banner">
-        {# info success warning danger #}
-            <div class="content">
-                <strong id="alert-banner-strong">Well done!</strong> 
-                <span id="alert-banner-span">You successfully read this important alert message.</span>
-            </div>
-        </section>
+          {# ALERT BANNER #}
+          <section id="alert-banner" class="alert-banner">
+          {# info success warning danger #}
+              <div class="content">
+                  <strong id="alert-banner-strong">Well done!</strong> 
+                  <span id="alert-banner-span">You successfully read this important alert message.</span>
+              </div>
+          </section>
 
-        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-        <section id="messageApp" style="display:none;" class="overlay-messages">
-            {{ render(controller("PPMessageBundle:Message:initMessageBox"))}}
-        </section>
-        {% endif %}
-            
-        <div id="containerApp">
-            <base href=" " />
-            {% block bellowHeader %}                     
-            {% endblock %}  
+          {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+          <section id="messageApp" style="display:none;" class="overlay-messages">
+              {{ render(controller("PPMessageBundle:Message:initMessageBox"))}}
+          </section>
+          {% endif %}
+              
+          <div id="containerApp">
+              <base href=" " />
+              {% block bellowHeader %}                     
+              {% endblock %}  
 
-            <section class="main">
-                <div class="content">
+              <section class="main">
+                  <div class="content">
 
 
-                    {% block body %}
-                    {% endblock %}
+                      {% block body %}
+                      {% endblock %}
 
-                    {% block sideInfo %}
-                        <div id="sideInfo" class="sidebar">
-                            {{ render(controller("PPRequestBundle:Request:sideInfo")) }}                    
-                        </div>
-                    {% endblock %}
+                      {% block sideInfo %}
+                          <div id="sideInfo" class="sidebar">
+                              {{ render(controller("PPRequestBundle:Request:sideInfo")) }}                    
+                          </div>
+                      {% endblock %}
+                  </div>
+              </section>
+          </div>                            
+          <section class="overlay sign" id="signInUpOver" style="display:none;" >
+              
+            <button class="button-close"  id="signInUpOverClose" >×</button>
+            <div class="overlay-content">
+              <h3 class="overlay-title">Prestapic</h3>
+              <p class="ind">Sign in to Prestapic or create an account</p>
+              <div class="overlay-actions">                                
+                <div class="signin-form">
+                  {{ render(controller("FOSUserBundle:Security:login"))}}
                 </div>
-            </section>
-        </div>                            
-        <section class="overlay sign" id="signInUpOver" style="display:none;" >
-            
-          <button class="button-close"  id="signInUpOverClose" >×</button>
-          <div class="overlay-content">
-            <h3 class="overlay-title">Prestapic</h3>
-            <p class="ind">Sign in to Prestapic or create an account</p>
-            <div class="overlay-actions">                                
-              <div class="signin-form">
-                {{ render(controller("FOSUserBundle:Security:login"))}}
+                <div class="signup-form">
+                  <div class="message">If you want to post applications you need to register</div>
+                  <a class="button signup" href="{{ path('pp_user_register') }}">Sign up</a>
+                </div>
               </div>
-              <div class="signup-form">
-                <div class="message">If you want to post applications you need to register</div>
-                <a class="button signup" href="{{ path('pp_user_register') }}">Sign up</a>
+              <div class="terms">
+                <p>
+                  By clicking Sign Up, you agree to our
+                  <a href="#">Terms</a>
+                  and that you have read our
+                  <a href="#">Data Policy</a>
+                  , including our
+                  <a href="#">Cookie Use</a>.
+                </p>
               </div>
             </div>
-            <div class="terms">
-              <p>
-                By clicking Sign Up, you agree to our
-                <a href="#">Terms</a>
-                and that you have read our
-                <a href="#">Data Policy</a>
-                , including our
-                <a href="#">Cookie Use</a>.
-              </p>
-            </div>
-          </div>
-        </section>                        
-              
-              
-        <footer>     
-        </footer>
+          </section>                        
+                
+                
+          <footer>     
+          </footer>
+      </div>
     </div>
     
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
