--- a/web/css/2ec10fe_part_1_style_3.css
+++ b/web/css/2ec10fe_part_1_style_3.css
@@ -164,10 +164,9 @@ td, th {
   -o-box-sizing: border-box;
   box-sizing: border-box; }
 
-html, body, #main {
+html, body {
   width: 100%;
-  height: 100%;
-  overflow-y: auto; }
+  height: 100%; }
 
 a {
   color: #C24C4A;
@@ -1346,7 +1345,7 @@ section.main {
           list-style: none;
           display: inline; }
           section.main .sidebar .footer ul li:after {
-            content: "┬À";
+            content: "·";
             margin: 0 5px; }
         section.main .sidebar .footer ul li:last-child:after {
           content: " "; }
