--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -8,10 +8,11 @@
 
     <title>{% block title %} Prestapic{% endblock %}</title>
 
-        {% stylesheets filter='cssrewrite, sass, ?yui_css'
-            '@PPRequestBundle/Resources/public/css/*.sass' %}
-            <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
-        {% endstylesheets %}        
+    {% stylesheets filter='sass, cssrewrite, ?yui_css'
+        '@PPRequestBundle/Resources/public/css/style.sass'        
+    %}
+        <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
+    {% endstylesheets %}        
 </head>
 
 <body id="body">
@@ -51,7 +52,7 @@
                                 {% block body %}
                                 {% endblock %}
 
-                                {% block sideInfo %}
+                                {% block sideInfo %}                                        
                                         <div id="sideInfo" class="sidebar">
                                                 {{ render(controller("PPRequestBundle:Request:sideInfo")) }}                                        
                                         </div>
