--- a/src/PP/PropositionBundle/Resources/views/proposition/propositionList.html.twig
+++ b/src/PP/PropositionBundle/Resources/views/proposition/propositionList.html.twig
@@ -1,12 +1,12 @@
 {% for proposition in propositionList %}
     {{ include("PPPropositionBundle:proposition:propositionPattern.html.twig") }}
     {% if loop.index == 3 %}
-            {% if nextPage <= nbPages %}
+            {% if haveNextPage == true %}
                 <div  id="{{ "loadPageTrigger"~nextPage }}"></div>
                 {{ form(loadPropositionForm) }}
             {% endif %}
     {% endif %}
 {% else %}    
 {% endfor %} 
-{% if nextPage <= nbPages %}<div  id="{{ "loadPage"~nextPage }}"></div>{% endif %}
+{% if haveNextPage == true %}<div  id="{{ "loadPage"~nextPage }}"></div>{% endif %}
 <!--//!->
