--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -61,11 +61,13 @@
                                 {% endblock %}
                         </div>
                 </section>
+                        
+                
         </div>
-
         {% block propositionPopup %}
-            {{ include ("PPPropositionBundle:proposition:propositionPopup.html.twig") }}
-        {% endblock %}                                                        
+            {{ render(controller("PPPropositionBundle:Proposition:propositionPopup")) }}
+        {% endblock %}
+                                                                
         <section class="overlay sign" id="signInUpOver" style="display:none;" >
 
             <button class="button-close"    id="signInUpOverClose" >×</button>
@@ -97,8 +99,7 @@
 
         <footer>         
         </footer>
-    </div>
-   
+    </div>    
     
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <script src="https://code.angularjs.org/1.4.7/angular.min.js" type="text/javascript"></script>
@@ -114,6 +115,7 @@
                                    '@PPRequestBundle/Resources/public/js/lazyLoadDirective.js' 
                                    '@PPMessageBundle/Resources/public/js/messageApp.js'
                                    '@PPMessageBundle/Resources/public/js/elastic.js'
+                                   '@PPPropositionBundle/Resources/public/js/popupController.js'
     %}   
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
