--- a/src/PP/PropositionBundle/Resources/public/css/style.sass
+++ b/src/PP/PropositionBundle/Resources/public/css/style.sass
@@ -70,7 +70,11 @@ section.slideshow
 					font-size: 15px
 					line-height: 20px
 					text-transform: uppercase
-					
+                                        
+					&:hover
+						&:after
+							animation: beat 1.25s cubic-bezier(.165,.84,.44,1) infinite
+
 					&:hover, &.selected
 						color: rgba(0,0,0,0.5)
 						background: rgba(255,255,255,0.5)
@@ -219,3 +223,14 @@ section.slideshow
 					-moz-osx-font-smoothing: grayscale
 					content: "\e905"
 					float: right
+@keyframes beat
+	0%
+		transform: scale(1)
+	20%
+		transform: scale(1.2)
+	30%
+		transform: scale(1.05)
+	45%
+		transform: scale(1.2)
+	100%
+		transform: scale(1)
