--- a/src/PP/PropositionBundle/Resources/views/proposition/propositionPopup.html.twig
+++ b/src/PP/PropositionBundle/Resources/views/proposition/propositionPopup.html.twig
@@ -1,36 +1,47 @@
-<section class="slideshow">
-	<img alt="image" class="single-photo" src="http://1.bp.blogspot.com/-hNC-oT6f-fY/TeXxO26yjvI/AAAAAAAAAOY/qfkOqdKkBi8/s1600/platon-photographer-putin-man-of-the-year-portrait.jpg">
-	<div class="overlay"></div>
+<section id="popupPropApp" class="slideshow" style="display: none;" >
+    
+    {{ form(getPropositionForm) }}
+    {{ form(upvotePropositionForm) }}
+    {% verbatim %}
+    <div ng-controller="popupController as popup" >
+        <base href=" " />
+	<img ng-if="proposition.image" alt="image" class="single-photo" ng-src="{{ proposition.image }}">
+	<div id="propOverlay" class="overlay"></div>
 	<div class="content-slideshow">
-		<div class="action-top">
+		<div id="propActionTop" class="action-top">
 			<div class="action-group left">
 				<a class="icon infos" href="#"></a>
-			</div>
+			</div>                   
+
 			<div class="action-group center">
 				<a class="icon share" href="#"></a>
-				<a class="icon download" href="#"></a>
+				<a target="_self" class="icon download" href="{{ proposition.image }}" download="{{ proposition.title }}"></a>
 				<a class="icon report" href="#"></a>
 				<a class="icon delete" href="#"></a>
 			</div>
 			<div class="action-group right">
-				<a class="selecting-prop selected" href="#">Selected picture</a>
-				<button class="button-close">×</button>
+				<a ng-if="proposition.selected"class="selecting-prop selected" href="#">Selected picture</a>
+				<button ng-click="popup.close()" class="button-close">×</button>
 			</div>
 		</div>
-		<div class="img-title">
-			<a class="avatar" href="#">
-				<img src="http://my-versus.net/admin/avatar/Fran_ois_Hollande.jpg">
-			</a>
-			<div class="infos">
-				<div class="name">Image #1</div>
-				<div class="author">
-					by 
-					<a href="#">Flambie</a>
-				</div>
-			</div>
-		</div>
-		<div class="action-bottom">
-			<a class="count-vote" href="#">13</a>
-		</div>
+        <div id="propActionBottom"> 
+            <div class="img-title">
+                <a target="_self" class="avatar" href="{{ proposition.author.url }}">
+                    <img ng-src="{{ proposition.author.image }}">
+                </a>
+                <div class="infos">
+                    <div class="name">{{ proposition.title }}</div>
+                    <div class="author">
+                        by 
+                        <a  target="_self" href="{{ proposition.author.url }}">{{ proposition.author.name }}</a>
+                    </div>
+                </div>
+            </div>
+            <div class="action-bottom">
+                <a class="count-vote" id="propositionUpvoteButton" href="" ng-click="popup.postPropositionVote(proposition.id)">{{ proposition.upvoteNb }}</a>
+            </div>
+        </div>
 	</div>
+    </div>
+    {% endverbatim %}
 </section>
